Added all changes
Added all changes

--- a/index.html
+++ b/index.html
@@ -251,7 +251,11 @@ p  {
 			<p>by Leo and Yann</p><br>
 			<NAV>
 <UL>
-<LI>Home</LI>
+<LI>Home
+	<UL>
+		<LI><A href='index.html'>Main page</A></LI>
+	</UL>
+</LI>
 
 
 <LI>Levels
@@ -281,12 +285,17 @@ p  {
 </NAV>
 <br>
 <br>
-<p><p><font size="4"><span style="color:red">Hi, this is a website intro we filmed and edited, it took a long time,<br> and looks more like a funny video in the middle, but,<br>I hope you enjoy and like our video. Lastly, make sure you guys become a better basketball player!</span></font></p></p>
-<br>
-<br>
-<IMG src='yann.png' style="width:300px;height:200px;"><span style="color:blue">Yann</span></IMG><br>
-<IMG src='leo.png' style="width:200px;height:270px;"><span style="color:blue">Leo</span></IMG>
+<p><p><font size="4"><span style="color:white">Hi, this is a website intro we found on YouTube,<br>I hope you enjoy and like our website. Lastly, make sure you guys become a better basketball player!</span></font></p></p>
 
-		<
+<CENTER><video width="720" height="640" autoplay="">
+  <source src="1.mp4" type="video/mp4">
+  <source src="1.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+</CENTER>\
+<p><p><font size="3"><span style="color:white">Link to the <a href="https://www.youtube.com/watch?v=dcDW6drsnEo" style="color:red">Original Video</a>(ft. Stephen Curry</span></font></p></p>
+
+
+		
 	</body>
 </html>
