--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ p  {
 Your browser does not support the video tag.
 </video>
 </CENTER>\
-<p><p><font size="3"><span style="color:white">Link to the <a href="https://www.youtube.com/watch?v=dcDW6drsnEo" style="color:red">Original Video</a>(ft. Stephen Curry</span></font></p></p>
+<p><p><font size="3"><span style="color:white">Link to the <a href="https://www.youtube.com/watch?v=dcDW6drsnEo" style="color:red">Original Video</a>(ft. Stephen Curry)</span></font></p></p>
 
 
 		
