--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ p  {
 </NAV>
 <br>
 <br>
-<p><p><font size="4"><span style="color:white">Hi, this is a website intro we found on YouTube,<br>I hope you enjoy and like our website. Lastly, make sure you guys become a better basketball player!</span></font></p></p>
+<p><p><font size="4"><span style="color:white">Hi, this is a website intro we found on YouTube,<br>I hope you enjoy and like our website.<br> Lastly, make sure you guys become a better basketball player!</span></font></p></p>
 
 <CENTER><video width="720" height="640" autoplay="">
   <source src="1.mp4" type="video/mp4">
